syntax = "proto3";

package mangahub;

option go_package = "mangahub/api";

// MangaService provides gRPC methods for manga operations
service MangaService {
  // GetManga retrieves a manga by ID
  rpc GetManga(GetMangaRequest) returns (MangaResponse);
  
  // ListManga retrieves all manga
  rpc ListManga(ListMangaRequest) returns (ListMangaResponse);
  
  // SearchManga searches for manga by query
  rpc SearchManga(SearchMangaRequest) returns (ListMangaResponse);
  
  // GetUserProgress retrieves user's reading progress
  rpc GetUserProgress(GetUserProgressRequest) returns (UserProgressResponse);
  
  // UpdateProgress updates user's reading progress
  rpc UpdateProgress(UpdateProgressRequest) returns (UpdateProgressResponse);
}

// Request messages
message GetMangaRequest {
  string manga_id = 1;
}

message ListMangaRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message SearchMangaRequest {
  string query = 1;
}

message GetUserProgressRequest {
  string user_id = 1;
  string manga_id = 2;
}

message UpdateProgressRequest {
  string user_id = 1;
  string manga_id = 2;
  int32 chapter = 3;
}

// Response messages
message MangaResponse {
  Manga manga = 1;
}

message ListMangaResponse {
  repeated Manga mangas = 1;
  int32 total = 2;
}

message UserProgressResponse {
  UserProgress progress = 1;
}

message UpdateProgressResponse {
  bool success = 1;
  string message = 2;
  UserProgress progress = 3;
}

// Data models
message Manga {
  string id = 1;
  string title = 2;
  string author = 3;
  repeated string genres = 4;
  string status = 5;
  int32 total_chapters = 6;
  string description = 7;
  string cover_url = 8;
}

message UserProgress {
  string id = 1;
  string user_id = 2;
  string manga_id = 3;
  int32 chapter = 4;
  string updated_at = 5;
}

